--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link
 			rel="stylesheet"
@@ -18,6 +19,7 @@
 			href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600"
 		/> -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Neuton|Oswald"> 
 		<title>ISTE SC MANIT</title>
 		<style>
 			.text-center {
