--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@ margin:24px;
 				animation: spinner 1s infinite linear;
 				border-radius: 50%;
 				border: 3px solid rgba(255, 255, 255, 0.2);
-				border-top-color: #3e81de;
+				border-top-color: rgb(223, 105, 43);
 				height: 9em;
 				margin: 0 auto 3.5em auto;
 				width: 9em;
@@ -77,7 +77,7 @@ margin:24px;
 			}
 
 			.ctn-preloader .animation-preloader .txt-loading .letters-loading {
-				color: rgba(51, 110, 165, 0.84);
+				color: rgb(223, 105, 43);
 				position: relative;
 			}
 
@@ -207,7 +207,7 @@ margin:24px;
 			}
 
 			.ctn-preloader .loader.dark_bg .loader-section .bg {
-				background: #4d86c4;
+				background: rgb(223, 105, 43);
 			}
 
 			.ctn-preloader.loaded .animation-preloader {
